--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,22 @@
 site_name: My Docs
 
+theme:
+  name: material
+  logo: img/nesi_ga.png
+  favicon: img/nesi_ga.png
+   # 404 page
+  static_templates:
+    - 404.html
+
+  # Necessary for search to work properly
+  include_search_page: false
+  search_index_only: true
+
+  # Default values, taken from mkdocs_theme.yml
+  language: en
+  font:
+    text: Roboto
+    code: Roboto Mono
 
 markdown_extensions:
   - abbr
