add primary color theme to light mode

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,7 +18,8 @@ theme:
 
   # Palette toggle for light mode
   - media: "(prefers-color-scheme: light)"
-    scheme: default 
+    scheme: default
+    primary: indigo
 
 
     toggle:
