--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,7 +3,7 @@ site_name: Inter-Advanced Shell for Bioinformatics
 theme:
   name: material
   logo: images/nesi_ga.png
-  favicon: images/nesi_ga.png
+  favicon: 
    # 404 page
   static_templates:
     - 404.html
