add few navigation options to mkdocs.yml

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,6 +32,10 @@ theme:
     toggle:
       icon: material/brightness-4
       name: Switch to system preference
+  
+  features:
+    - navigation.tracking
+    - navigation.sections
 
     
 
