change title in mkdocs.yml

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Inter-Advanced Shell for Bioinformatics
+site_name: Intermediate-Advanced Shell for Bioinformatics
 
 theme:
   name: material
