--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -96,3 +96,6 @@ markdown_extensions:
       custom_checkbox: true
   - pymdownx.tilde
   - pymdownx.snippets
+
+extra_css: 
+  - stylesheets/extra.css
