--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -104,3 +104,8 @@ plugins:
     - mkdocs-video
     - search:
         lang: en
+
+extra_javascript:
+  - javascripts/mathjax.js
+  - https://polyfill.io/v3/polyfill.min.js?features=es6
+  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
