Change the repo from inter-ad to just inter

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Intermediate-Advanced Shell for Bioinformatics
+site_name: Intermediate Shell for Bioinformatics
 site_author: Genomics Aotearoa & NeSI
 site_dir: public
 site_url: "https://genomicsaotearoa.github.io/shell-for-bioinformatics/"
