--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -101,18 +101,18 @@ markdown_extensions:
   - pymdownx.tilde
   - pymdownx.snippets
 
-plugins:
-    - search:
-        lang: en
+plugins: 
+  - glightbox:
+      effect: zoom
+      zoomable: true
+  - search:
+      lang: en
 
 extra_javascript:
   - javascripts/mathjax.js
   - https://polyfill.io/v3/polyfill.min.js?features=es6
   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
 
-extra:
-  version:
-    provider: mike
 
 extra_css:
   - stylesheets/extra.css
