--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,7 +6,7 @@ site_url: "https://genomicsaotearoa.github.io/shell-for-bioinformatics/"
 #Repository information
 
 repo_name:  GenomicsAotearoa/shell-for-bioinformatics 
-repo_url: https://github.com/GenomicsAotearoa/shell-for-bioinformatics.git
+repo_url: https://github.com/GenomicsAotearoa/shell-for-bioinformatics
 
 
 theme:
