--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -104,6 +104,7 @@ markdown_extensions:
       custom_checkbox: true
   - pymdownx.tilde
   - pymdownx.snippets
+  - pymdownx.blocks.caption
 
 plugins: 
   - glightbox:
